full-version_with_edits

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,12 @@
       <div class="header__container">
         <div class="top-actions">
           <a href="#" class="logo">
-            <img src="../src/images/header/Logo_new.svg" class="logo_img" alt="Kohler">
+            <object
+              data="../src/images/header/Logo_new.svg"
+              type="image/svg+xml"
+            >
+              <img src="../src/images/header/Logo_new.svg" class="logo_img" alt="Kohler">
+            </object>
           </a>
 
           <button 
@@ -347,9 +352,24 @@
           </div>
 
           <div class="customer_reviews--cards">
-            <img src="../src/images/section/Card.svg" class="customer_reviews--cards-img">
-            <img src="../src/images/section/Card-2.svg" class="customer_reviews--cards-img">
-            <img src="../src/images/section/Card-3.svg" class="customer_reviews--cards-img">
+            <object
+              data="../src/images/section/Card.svg"
+              type="image/svg+xml"
+            >
+              <img src="../src/images/section/Card.svg" class="customer_reviews--cards-img">
+            </object>
+            <object
+              data="../src/images/section/Card-2.svg"
+              type="image/svg+xml"
+            >
+              <img src="../src/images/section/Card-2.svg" class="customer_reviews--cards-img">
+            </object>
+            <object
+              data="../src/images/section/Card-3.svg"
+              type="image/svg+xml"
+            >
+              <img src="../src/images/section/Card-3.svg" class="customer_reviews--cards-img">
+            </object>
           </div>
 
           <div class="customer_reviews--title-imgs">
@@ -360,27 +380,27 @@
           <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m uk-grid">
               <li>
                   <div class="uk-panel">
-                      <img src="../src/images/section/imgs_review/Image.svg" width="600" height="600" alt="Слайдер">
+                    <img src="../src/images/section/imgs_review/Image.svg" width="600" height="600" alt="Слайдер">
                   </div>
               </li>
               <li>
                   <div class="uk-panel">
-                      <img src="../src/images/section/imgs_review/Image-2.svg" width="600" height="600" alt="Слайдер">
+                    <img src="../src/images/section/imgs_review/Image-2.svg" width="600" height="600" alt="Слайдер">
                   </div>
               </li>
               <li>
                   <div class="uk-panel">
-                      <img src="../src/images/section/imgs_review/Image-3.svg" width="600" height="600" alt="Слайдер">
+                    <img src="../src/images/section/imgs_review/Image-3.svg" width="600" height="600" alt="Слайдер">
                   </div>
               </li>
               <li>
                   <div class="uk-panel">
-                      <img src="../src/images/section/imgs_review/Image-4.svg" width="600" height="600" alt="Слайдер">
+                    <img src="../src/images/section/imgs_review/Image-4.svg" width="600" height="600" alt="Слайдер">
                   </div>
               </li>
               <li>
                   <div class="uk-panel">
-                      <img src="../src/images/section/imgs_review/Image-5.svg" width="600" height="600" alt="Слайдер">
+                    <img src="../src/images/section/imgs_review/Image-5.svg" width="600" height="600" alt="Слайдер">
                   </div>
               </li>
           </ul>
