--- a/src/pages/privacy_notice.html
+++ b/src/pages/privacy_notice.html
@@ -20,7 +20,12 @@
     <div class="header__container">
       <div class="top-actions">
         <a href="../index.html" class="logo">
-          <img src="../images/header/Logo_new.svg" class="logo_img" alt="Kohler">
+          <object
+              data="../images/header/Logo_new.svg"
+              type="image/svg+xml"
+            >
+              <img src="../images/header/Logo_new.svg" class="logo_img" alt="Kohler">
+            </object>
         </a>
         <div id="overlay" onclick="off()">
         </div>
