--- a/src/pages/shower_accessories.html
+++ b/src/pages/shower_accessories.html
@@ -35,7 +35,12 @@
       <div class="header__container">
         <div class="top-actions">
           <a href="#" class="logo">
-            <img src="../images/header/Logo_new.svg" class="logo_img" alt="Kohler">
+            <object
+              data="../images/header/Logo_new.svg"
+              type="image/svg+xml"
+            >
+              <img src="../images/header/Logo_new.svg" class="logo_img" alt="Kohler">
+            </object>
           </a>
 
           <button 
