--- a/src/pages/terms.html
+++ b/src/pages/terms.html
@@ -15,48 +15,53 @@
 
 <body>
   <script
-  type="text/javascript"
-  src="../scripts/menu.js"
-  defer
->
-</script>
-<script
-  type="text/javascript"
-  src="../scripts/overlay.js"
-  defer
->
-</script>
-<script
-  type="text/javascript"
-  src="../scripts/form.js"
-  defer
->
-</script>
+    type="text/javascript"
+    src="../scripts/menu.js"
+    defer
+  >
+  </script>
   <script
-  type="text/javascript"
-  src="../scripts/terms-preload.js"
-  defer
->
-</script>
+    type="text/javascript"
+    src="../scripts/overlay.js"
+    defer
+  >
+  </script>
   <script
-  type="text/javascript"
-  src="../scripts/terms-secondary.js"
-  defer
->
-</script>
+    type="text/javascript"
+    src="../scripts/form.js"
+    defer
+  >
+  </script>
+  <script
+    type="text/javascript"
+    src="../scripts/terms-preload.js"
+    defer
+  >
+  </script>
+  <script
+    type="text/javascript"
+    src="../scripts/terms-secondary.js"
+    defer
+  >
+  </script>
 
-<header class="header">
-  <div class="header__container">
-    <div class="top-actions">
-      <a href="../index.html" class="logo">
-        <img src="../images/header/Logo_new.svg" class="logo_img" alt="Kohler">
-      </a>
+  <header class="header">
+    <div class="header__container">
+      <div class="top-actions">
+        <a href="../index.html" class="logo">
+          <object
+            data="../images/header/Logo_new.svg"
+            type="image/svg+xml"
+          >
+            <img src="../images/header/Logo_new.svg" class="logo_img" alt="Kohler">
+          </object>
+        </a>
 
-      <div id="overlay" onclick="off()">
+        <div id="overlay" onclick="off()">
+        </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
 
   <div id="terms-of-use">
     <div class="container term-of-use content-space-1">
